packages/next-swc/crates/core/tests/errors/next-dynamic/too-many-arguments/output.stderr
error: next/dynamic only accepts 2 arguments
 --> input.js:3:43
  |
3 | const DynamicComponentWithCustomLoading = dynamic(
  |                                           ^^^^^^^

